fixed banners on tablet.

--- a/static/bootstrap/widgets/_slick.scss
+++ b/static/bootstrap/widgets/_slick.scss
@@ -507,7 +507,6 @@ $slick-opacity-not-active: 0.25 !default;
     &.slick-770x240 {
       .content-teaser {
         height: 165px;
-        padding: 15px;
         .full-height {
           height: 165px - (15px * 2);
         }
