--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9379,8 +9379,7 @@ a:hover .has-overlay h4 {
     height: 134px; }
 
   .slick.slick-770x240 .content-teaser {
-    height: 165px;
-    padding: 15px; }
+    height: 165px; }
     .slick.slick-770x240 .content-teaser .full-height {
       height: 135px; }
   .slick.slick-770x240 .caption-wrapper {
