--- a/static/styles/bootstrap-dsg.css
+++ b/static/styles/bootstrap-dsg.css
@@ -6136,8 +6136,7 @@
     .bootstrap .slick.slick-initialized.col-sm-9 .img-crop, .bootstrap .slick.slick-initialized.col-md-9 .img-crop, .bootstrap .slick.slick-initialized.col-lg-9 .img-crop {
       height: 134px; }
     .bootstrap .slick.slick-770x240 .content-teaser {
-      height: 165px;
-      padding: 15px; }
+      height: 165px; }
       .bootstrap .slick.slick-770x240 .content-teaser .full-height {
         height: 135px; }
     .bootstrap .slick.slick-770x240 .caption-wrapper {
